fix(PageHeader): Fix a bug allowing the page content to be too small

--- a/scss/components/_page-header.scss
+++ b/scss/components/_page-header.scss
@@ -1,6 +1,7 @@
 header.page {
   background-color: $black;
   grid-area: page-header;
+  height: min-content;
   padding: 1rem 2rem;
   padding-left: calc(2rem + env(safe-area-inset-left));
   padding-right: calc(2rem + env(safe-area-inset-right));
