--- a/scss/core/_root.scss
+++ b/scss/core/_root.scss
@@ -44,6 +44,8 @@ div#alert-container {
   grid-template-areas:
     'banner page-header'
     'banner page';
+  grid-template-columns: min-content 1fr;
+  grid-template-rows: min-content 1fr;
 
   @media (max-width: 1000px) {
     grid-template-areas:
